# fastapi-docker-deploy

./: README.md  docker-compose.yaml
.github/workflows/: ci.yaml  deploy.yaml  gcp-upload.yaml
backend/: Dockerfile  alembic.ini  prestart.sh  pyproject.toml  start.sh
backend/app/: backend_pre_start.py  config.py  database.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: a15c1ce51dc2_create_post_table.py
backend/scripts/: local_build.sh
